CHANGELOG
---------

- 2020/01/01 0.9.22 release.
    - Issue 114: Unexpected whitespace inserted in Wakati mode 

- 2019/12/27 0.9.1 release.
    - Issue 112: Erroneous handling of whitespace trimming
    - Issue 113: Security vulnerability for Jinja (requirement for documentation generation) 
    - Adding Python 3.8 to Travis CI tests
    - Adding doc references to Python 3.8 in supported versions 

- 2018/01/30 0.9.0 release.
    - Issue 92: Where's the natto-py documentation?
    - Issue 96: Index out of range error message not being captured by natto-py
    - Issue 99: Node-formatting ignored when using Unidic unless -O is set to empty string
    - Issue 101: Enable -r/--rcfile MeCab option

- 2016/01/31 0.8.0 release.
    - Issue 72: Revamp IPython notebooks for use with Jupyter
    - Issue 73: Better examples for 制約付き解析
    - Issue 78: Dynamically set version and version info for docs as well
    - Issue 83: natto.api.MeCabError: MECAB_NBEST request type is not set
    - Issue 84: Start leveraging the logging library

- 2015/11/07 0.7.0 release.
    - Issue 67: Confirm behavior with Python 3.5
    - Issue 68: Update README with dependencies for dev & testing
    - Issue 69: Read in version string from file

- 2015/05/02 0.6.0 release.
    - Issue 34: Add support for feature constraint parsing 

- 2015/04/18 0.5.1 release.
    - Issue 48: Object destructor for MeCab dumps core in 0.5.0

- 2015/04/17 0.5.0 release.
    - Issue 35: Use new Model- and Lattice-based C APIs internally
    - Issue 36: Make refs to MeCab and Tagger consistent in docs
    - Issue 37: Partial parsing and handling of tokens
    - Issue 38: Downloads and license badges for README.md & API docs

- 2015/03/31 0.4.0 release.
    - Issue 21: Cleaned up Lattice-related API call.
    - Issue 23: Implemented support for theta option on Lattice.
    - Issue 25: Enhanced tokenization to remove whitespace for partial parse.
    - Issue 26: Updated to docs/index.rst for new MeCab home at github. 
