@@ -28,7 +28,6 @@ install:
 
 language: python
 python:
-  - "2.7"
   - "3.4"
   - "3.5"
   - "3.6"
