@@ -68,7 +68,7 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'natto-py'
-copyright = u'2020, Brooke M. Fujita'
+copyright = u'2021, Brooke M. Fujita'
 author = u'Brooke M. Fujita'
 
 # The version info for the project you're documenting, acts as replacement for
@@ -76,9 +76,9 @@ author = u'Brooke M. Fujita'
 # built documents.
 #
 # The short X.Y version.
-version = u'0.9.2'
+version = u'1.0.0'
 # The full version, including alpha/beta/rc tags.
-release = u'0.9.2'
+release = u'1.0.0'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
