@@ -10,9 +10,9 @@ pathtools==0.1.2
 pkginfo==1.2.1
 port-for==0.3.1
 pycparser==2.14
-Pygments==2.0.2
+Pygments>=2.7.4
 pytz==2015.6
-PyYAML==3.11
+PyYAML>=5.4
 requests>=2.20.0
 requests-toolbelt==0.4.0
 six==1.9.0
