@@ -76,43 +76,25 @@ text6:
 text7:
     text: 123 ABCおよび１２３　ＡＢＣ
     pattern: '[\d]{3}[\s]+[A-ZＡ-Ｚ]{3}'
-    py2:
-        tokens: 
-            - 123 ABC 
-            - および１２３　ＡＢＣ
-        matches:
-            - True
-            - False
-    py3:
-        tokens: 
-            - 123 ABC 
-            - および
-            - １２３　ＡＢＣ
-        matches:
-            - True
-            - False
-            - True
+    tokens: 
+        - 123 ABC 
+        - および
+        - １２３　ＡＢＣ
+    matches:
+        - True
+        - False
+        - True
 text8:
     text: 123 ABCおよび１２３　ＡＢＣ
     pattern: '[\d]{3}[\s]+[A-ZＡ-Ｚ]{3}'
-    py2:
-        tokens: 
-            - 123 ABC 
-            - および
-            - １２３　ＡＢＣ
-        matches:
-            - True
-            - False
-            - True
-    py3:
-        tokens: 
-            - 123 ABC 
-            - および
-            - １２３　ＡＢＣ
-        matches:
-            - True
-            - False
-            - True
+    tokens: 
+        - 123 ABC 
+        - および
+        - １２３　ＡＢＣ
+    matches:
+        - True
+        - False
+        - True
 text9:
     text: 心の中で3回唱え、 ヒーロー見参！ヒーロー見参！ヒーロー見参！ 
     pattern: ヒーロー見参
