@@ -1,7 +1,11 @@
 CHANGELOG
 ---------
 
-- 2020/01/01 0.9.22 release.
+- 2021/10/03 1.0.0 release.
+    - Issue 119: Failed to install natto-py when setuptools 58.0 or later is used
+    - Support for Python 2 has ended; please use 0.9.2 if you use Python2.
+
+- 2020/01/01 0.9.2 release.
     - Issue 114: Unexpected whitespace inserted in Wakati mode 
 
 - 2019/12/27 0.9.1 release.
